<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="display_initial_value">0</string>
    <string name="error_message">Error</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="button_mul">*</string>
    <string name="button_div">/</string>
    <string name="button_clear">C</string>
    <string name="button_equals">=</string>
    <string name="display_screen_description">Calculator display screen</string>
</resources>